tests/build/cases/widget/invalid_special.stderr
error: unexpected `foo!` as default value
 --> cases/widget/invalid_special.rs:8:18
  |
8 |         margin = foo!;
  |                  ^^^

warning: unused import: `zero_ui::properties::margin`
 --> cases/widget/invalid_special.rs:5:9
  |
5 |     use zero_ui::properties::margin;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
help: consider adding a `#[cfg(test)]` to the containing module
 --> cases/widget/invalid_special.rs:3:1
  |
3 | #[widget($crate::test_widget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this warning originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
